<resources>
    <string name="app_name">PitStopAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">Rajan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_orders">Orders</string>
    <string name="menu_service_centers">Service Centers</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app_title_nav_header">PitStop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders_page_title">Orders</string>
    <string name="order_id_search_hint">Order ID</string>
    <string name="customer_id_search_hint">Customer ID</string>
    <string name="emp_id_search_hint">Emp Id</string>
    <string name="search_filters">SEARCH</string>
    <string name="order_status">Ongoing</string>
    <string name="service_centers_page_title">Service Centers</string>
    <string name="service_center_search_hint">Search Service center</string>
    <string name="add_service_center">Add Service Center</string>
    <string name="name_title">Name</string>
    <string name="cars_in_service_title">In Service</string>
    <string name="cars_delivered_title">Delivered</string>
    <string name="services_scheduled_title">Scheduled</string>
    <string name="action_title">Action</string>
    <string name="no_results">No Results found</string>
    <string name="executive_name_label">Executive name</string>
    <string name="driver_label">Driver name</string>
    <string name="submit_order_detail_admin">Submit</string>
    <string name="add_packages_title">Add Packages</string>
    <string name="add_package_name_hint">Package Name</string>
    <string name="price_hint">Price</string>
    <string name="discounted_price_hint">Discounted Price</string>
    <string name="add_inclusion">Add Inclusion</string>
    <string name="add_package">Add Package</string>
    <string name="employees_page_title">Employees</string>
    <string name="search_employees">Search Employee</string>
    <string name="add_employee">Add Employee</string>
    <string name="jobs_assigned">jobs Assigned</string>
    <string name="jobs_completed">Jobs Completed</string>
    <string name="jobs_pending">Jobs Pending</string>
    <string name="remarks">Remarks</string>
    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="area_label">Area</string>
    <string name="phone_no_label">Phone Number</string>
    <string name="save_label">Save</string>
    <string name="add_service_center_title">Add Service Center</string>
    <string name="add_label">Add</string>
    <string name="sale_price_label">Sale Price</string>
    <string name="original_price_label">Original Price</string>
    <string name="add_package_title">Add Package</string>
    <string name="verify_phone_sub_label">We have sent you a PIN code to %1$s, enter here to verify your phone number</string>

    <string-array name="areas">
        <item>Area</item>
        <item>HSR Layout</item>
        <item>Koramangala</item>
        <item>Indira Nagar</item>
        <item>Madiwala</item>
        <item>Whitefield</item>
        <item>Sarjapur</item>
        <item>MG Road</item>
        <item>Shavaji Nagar</item>
    </string-array>

    <string-array name="profile_types">
        <item>Profile</item>
        <item>Executive</item>
        <item>Admin</item>
        <item>Driver</item>
    </string-array>

    <string name="resend_otp_timer">Resending in 00:%1$02d</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="phone_call_permission_msg">Will open phone app to make phone call</string>
    <string name="phone_call_permission_title">Phone Call Access Needed</string>


</resources>
