<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_service_centers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_service_centers" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_packages"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_packages" />
    </group>



</menu>
