<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".28"
        android:text="@string/name_title"
        style="@style/TextAppearance.ServiceCenterHeaderItem" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/jobsAssignedTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".18"
        android:text="@string/jobs_assigned"
        android:gravity="center"
        style="@style/TextAppearance.ServiceCenterHeaderItem" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/jobsCompletedTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".18"
        android:text="@string/jobs_completed"
        android:gravity="center"
        style="@style/TextAppearance.ServiceCenterHeaderItem" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/jobsPendingTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".18"
        android:text="@string/jobs_pending"
        android:gravity="center"
        style="@style/TextAppearance.ServiceCenterHeaderItem" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/remarksTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".18"
        android:text="@string/remarks"
        android:gravity="center"
        style="@style/TextAppearance.ServiceCenterHeaderItem" />

</LinearLayout>