<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/side_nav_header_bg_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/TextAppearance.AppTitle"
        android:text="@string/app_title_nav_header" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profileRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:layout_marginStart="@dimen/nav_header_item_start_margin"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        android:textAppearance="@style/TextAppearance.NavProfileName"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileRole"
        app:layout_constraintLeft_toRightOf="@id/imageView"
        android:layout_marginStart="@dimen/nav_header_item_start_margin"
        android:layout_marginTop="@dimen/profile_name_margin_top"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="@style/TextAppearance.NavProfileName" />

</androidx.constraintlayout.widget.ConstraintLayout>
