<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addServiceCenterTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center"
        android:text="@string/add_service_center_title"
        style="@style/TextAppearance.ServiceCentersTitle"
        android:background="@color/white"
        android:elevation="8dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/addServiceCenterTitleTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginTop="18dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="28dp"
        android:paddingEnd="28dp" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50"
        />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/carMakeSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:entries="@array/areas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/spinner_with_round_corner"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/citySpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        tools:entries="@array/areas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/carMakeSpinner"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_with_round_corner"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/citySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInputEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_label"
            android:inputType="textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressTextEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_label"
            android:maxLines="2"
            android:minLines="2"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/areaTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/addressTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/areaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_label"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/areaTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no_label"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save_label"
        android:textAllCaps="false"
        android:enabled="false"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>