<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_250"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeesTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/employees_page_title"
        style="@style/TextAppearance.ServiceCentersTitle"
        android:background="@color/white"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/employeesTitleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        android:background="@color/white" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/employeeFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.SearchEtStyle"
            android:padding="18dp"
            android:hint="@string/search_employees"
            android:background="@drawable/round_corner"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addEmployeeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AddServiceCenters"
            app:layout_constraintStart_toEndOf="@id/employeeFilter"
            app:layout_constraintTop_toTopOf="@id/employeeFilter"
            app:layout_constraintBottom_toBottomOf="@id/employeeFilter"
            android:layout_marginStart="@dimen/add_btn_margin_start"
            android:text="@string/add_employee"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/employeesRv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/filterContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="40dp"
            android:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/noResultsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/TextAppearance.NoResults"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/no_results"
            android:visibility="gone"
            />

    <include
        android:id="@+id/loader"
        layout="@layout/loader_layout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>